--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -8,29 +8,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 
-
-
-<body class="d-flex justify-content-center align-items-center vh-100 bg-light">
-
-    <div class="card p-4 shadow-lg " style="width: 300px; border-radius: 10px; ">
-        <nav class="navbar bg-body ">
+<body>
+    <div class="login-card">
+        <nav class="navbar">
             <div class="container-fluid justify-content-center">
-                <img src="/static/logo-MadeMoments.png" alt="Logo" width="150" height="150"
-                    class="d-inline-block align-text-top">
+                <img src="/static/img/logo-icon/logo2.png" alt="Logo"
+                    class="login-logo d-inline-block align-text-top">
             </div>
         </nav>
-        <h2 class="text-center mb-3">Login</h2>
+
+
         <form method="post" action="{% url 'login_usuario' %}">
             {% csrf_token %}
-            <div class="mb-3">
-                <input name="email" type="email" class="form-control" placeholder="E-mail" required>
+            <div class="form">
+                <div>
+                    <input name="email" type="email" class="form-control" placeholder="E-mail" required>
+                </div>
+                <div>
+                    <input name="password" type="password" class="form-control" placeholder="Senha" required>
+                </div>
             </div>
-            <div class="mb-3">
-                <input name="password" type="password" class="form-control" placeholder="Senha" required>
-            </div>
-
             {% if messages %}
                 {% for message in messages %}
                     {% if message.tags == "error" %}
@@ -41,21 +41,16 @@
                 {% endfor %}
             {% endif %}
 
-
             <div class="d-grid gap-4 mt-3">
-                <button type="submit" class="btn btn-outline-success w-100">Entrar</button>
+                <button type="submit" class="btn w-100">Entrar</button>
             </div>
-
         </form>
 
-
         <div class="d-grid gap-4 mt-3">
-            <a href="{% url 'conta'%}" class="btn btn-outline-secondary w-100">Criar conta </a>
+            <a href="{% url 'conta'%}" class="btn w-100">Criar conta</a>
         </div>
 
-
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
